--- a/Style.css
+++ b/Style.css
@@ -22,6 +22,7 @@
             text-align: center;
             color: white;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 9px;
         }
 
         h1 {
@@ -29,7 +30,6 @@
             margin-bottom: 10px;
         }
 
-        /* Estilo das Seções */
         section {
             background-color: white;
             margin: 20px 0;
@@ -86,7 +86,7 @@
             text-align: center;
         }
 
-        /* Estilos da Tabela */
+        
         table {
             width: 100%;
             border-collapse: collapse;
@@ -109,7 +109,6 @@
             background-color: #f9f9f9;
         }
 
-        /* Layout Responsivo */
         @media (max-width: 768px) {
             section {
                 padding: 15px;
