adicionando os integrantes

--- a/Style.css
+++ b/Style.css
@@ -86,7 +86,6 @@
             text-align: center;
         }
 
-        
         table {
             width: 100%;
             border-collapse: collapse;
@@ -126,3 +125,27 @@
                 width: 100%;
             }
         }
+
+        #integrantes {
+            background-color: #f0f0f0;
+            padding: 20px;
+            margin: 20px auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            width: 80%;
+        }
+        
+        #integrantes h1 {
+            color: #333;
+            font-size: 2em;
+            margin-bottom: 10px;
+        }
+        
+        #integrantes p {
+            color: #555;
+            font-size: 1.2em;
+            line-height: 1.5; 
+            font-family: 'Arial', sans-serif;
+        }
+        
