Comentando algumas linhas de codigo do Javascript

--- a/Style.css
+++ b/Style.css
@@ -127,7 +127,7 @@
         }
 
         #integrantes {
-            background-color: #f0f0f0;
+            background-color: #d0d0d0;
             padding: 20px;
             margin: 20px auto;
             border-radius: 10px;
